# qwindowkit

./: .gitignore  CMakeLists.txt
cmake/windows/: WinResource.rc.in
src/: CMakeLists.txt
src/core/: windowagentbase.cpp
src/core/contexts/: linuxwaylandcontext.cpp  qtwindowcontext.cpp  win32windowcontext.cpp
src/core/shared/: qwkwindowsextra_p.h
